# internal/dto/request.go
@@ -1,4 +1,4 @@
-package models
+package dto
 
 // PublishEventRequest represents a publish event request
 type PublishEventRequest struct {
@@ -14,4 +14,12 @@ type PublishEventRequest struct {
 // PublishEventsBulkRequest represents a publish bulk event request
 type PublishEventsBulkRequest struct {
 	Events []PublishEventRequest `json:"events" binding:"required,min=1,max=1000,dive"`
+}
+
+// GetMetricsRequest represents a metrics query request
+type GetMetricsRequest struct {
+	EventName string `form:"event_name" binding:"required" example:"product_view"`
+	From      int64  `form:"from" binding:"required" example:"1723475612"`
+	To        int64  `form:"to" binding:"required" example:"1723562012"`
+	GroupBy   string `form:"group_by" example:"channel"`
 }
